[package]
name = "groupgames"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wgfw = { git = "https://github.com/Dentosal/web-game-framework" }

serde_millis = "0.1.1"
rand = "0.8"
reqwest = { version = "0.11" }

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.5"
tokio = { version = "1.32", features = ["full"] }
pretty_env_logger = "0.5"
futures = { version = "0.3", default-features = false }
futures-util = "0.3"
log = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
